--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+aniso8601==9.0.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.0.4
 colorama==0.4.4
 Cython==0.29.23
+distlib==0.3.4
 filelock==3.6.0
 Flask==2.0.3
+Flask-Cors==3.0.10
+Flask-RESTful==0.3.9
 gensim==4.1.2
+gunicorn==20.1.0
 huggingface-hub==0.4.0
 idna==3.3
 itsdangerous==2.1.0
@@ -17,6 +22,7 @@ numpy==1.22.2
 packaging==21.3
 pandas==1.4.1
 Pillow==9.0.1
+platformdirs==2.5.1
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
@@ -36,7 +42,8 @@ torchaudio==0.10.2
 torchvision==0.11.3
 tqdm==4.63.0
 transformers==4.17.0
-typing-extensions==4.1.1
+typing_extensions==4.1.1
 urllib3==1.26.8
 vaderSentiment==3.3.2
+virtualenv==20.13.3
 Werkzeug==2.0.3
